WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59223
REGRESSION (
r82185
): iframe not displayed after navigation back to cached page
https://bugs.webkit.org/show_bug.cgi?id=59223
Summary
REGRESSION (r82185): iframe not displayed after navigation back to cached page
Beth Dakin
Reported
2011-04-22 12:51:57 PDT
* SUMMARY After navigating back to a page in the page cache with an iframe, the iframe is not loaded. * STEPS TO REPRODUCE 1. Navigate to <data:text/html,%3ciframe%20src=%22http://webkit.org/%22%3E%3C/iframe%3E> 2. Navigate in the same tab to <about:blank> 3. Go back * RESULTS The iframe is now empty * NOTES Only happens if the back/forward cache is enabled. This is a regression from
http://trac.webkit.org/changeset/82185
Patch forthcoming! <
rdar://problem/9323763
>
Attachments
Patch
(2.44 KB, patch)
2011-04-22 13:04 PDT
,
Beth Dakin
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2011-04-22 13:04:44 PDT
Created
attachment 90745
[details]
Patch I made a test that works for this in Safari, but it is not a valid DRT test since it passes in DRT even without my patch.
Maciej Stachowiak
Comment 2
2011-04-22 14:54:27 PDT
Comment on
attachment 90745
[details]
Patch What's different about DRT? IS it the fact that DRT doesn't use overlay scrollers? I'd suggest at least adding it as a manual test so we don't forget about it. r=me
Beth Dakin
Comment 3
2011-04-22 14:59:12 PDT
(In reply to
comment #2
)
> (From update of
attachment 90745
[details]
) > What's different about DRT? IS it the fact that DRT doesn't use overlay scrollers? I'd suggest at least adding it as a manual test so we don't forget about it. r=me
No, the bug occurs with all types of scrollbars. For some reason DRT just lays out and paints the iframe after going back to the page, which is not true in Safar/WebKit without this patch. I thought it would at least work as a pixel test, but it does not. There must be something sufficiently different about about DRT's back mechanism and "back" in the browser that causes the necessary layout to happen. I can add it as a manual test though.
Beth Dakin
Comment 4
2011-04-22 15:03:37 PDT
Do we have manual tests checked in anymore? I can't seem to find them.
Beth Dakin
Comment 5
2011-04-22 15:11:02 PDT
Committed the change with revision 84688. Not sure if there's a place for my still-manual test, so I will just hold onto it for now.
Alexey Proskuryakov
Comment 6
2011-04-22 15:34:50 PDT
> Do we have manual tests checked in anymore? I can't seem to find them.
Source/WebCore/manual-tests. Not that anyone ever runs those.
Beth Dakin
Comment 7
2011-04-22 15:37:13 PDT
(In reply to
comment #6
)
> > Do we have manual tests checked in anymore? I can't seem to find them. > > Source/WebCore/manual-tests. Not that anyone ever runs those.
WebCore! That's where they are hiding. Yeah, it's not super useful, but I will check it in there anyway.
Beth Dakin
Comment 8
2011-04-22 15:43:08 PDT
Manual test added with revision 84694.
WebKit Review Bot
Comment 9
2011-04-22 16:04:10 PDT
http://trac.webkit.org/changeset/84688
might have broken SnowLeopard Intel Release (Build)
WebKit Review Bot
Comment 10
2011-04-22 16:04:32 PDT
http://trac.webkit.org/changeset/84694
might have broken SnowLeopard Intel Release (Build)
WebKit Review Bot
Comment 11
2011-04-22 16:04:36 PDT
http://trac.webkit.org/changeset/84695
might have broken SnowLeopard Intel Release (Build)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug