https://bugs.webkit.org/show_bug.cgi?id=59223 REGRESSION (r82185): iframe not displayed after navigation back to cached page -and corresponding- <rdar://problem/9323763>

Reviewed by Maciej Stachowiak.

Cache the scroll position in Document::setInPageCache() instead of
FrameView::resetScrollbarsAndClearContentsSize(), and only clear the contents size
for the mainFrame(). Still resetScrollbars() for other frames, which matches pre-
r82185 code.
* dom/Document.cpp:
(WebCore::Document::setInPageCache):
* page/FrameView.cpp:
(WebCore::FrameView::resetScrollbarsAndClearContentsSize):



Canonical link: https://commits.webkit.org/74418@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84688 268f45cc-cd09-0410-ab3c-d52691b4dbfc